fixed button overflow issue

--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ body::before {
   top: -15vh;
   left: -15vw;
   transition: 0.4s ease;
+  z-index: 1;
 }
 
 .slide.active {
